Bug 1213762 - Clear AsyncCompositionManager::mIsFirstPaint on non-Android platforms, too. r=mstange

--HG--
extra : rebase_source : 86e4c9b185c9d5a0b57cc12099326008a5b08a55
extra : source : 84dbb629686454ce74c7cdf1ea18866f703a0b4d